'Changing Home Page'

--- a/portifolio/Pages/Index.razor
+++ b/portifolio/Pages/Index.razor
@@ -1,7 +1,18 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<div>
+    <h2 class="mt-5">Welcome!</h2>
 
-Welcome to your new app.
+    <p>
+        This website have the purpose of sharing knowledge and record some notes.
+    </p>
+    <p>
+        I have a feeling that social media are making things ephemeral. Nowadays, having a blog or a channel may be an act of resistance, and so we do.
+    </p>
+    <p>
+        If you don't know me, I'm a mechanical engineer graduated from UFRJ and Msc in computer science at UFPB. I'm actually working with data science and machine learning projects, so we'll have a lot of stuff like this here. I hope you enjoy it. 
+    </p>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+</div>
+
+<CardItem Title="Github" Description="Siga para mais informações" URI="http://github.com/DevSart" ImageURI="images/github.jpg"></CardItem>
