--- a/portifolio/Shared/NavMenu.razor.css
+++ b/portifolio/Shared/NavMenu.razor.css
@@ -49,6 +49,17 @@
     background-color: rgba(255,255,255,0.1);
     color: white;
 }
+.nav-img {
+    border-radius: 50%;
+    background-image: url('images/perfil_foto.jpg');
+    background-size: 10rem;
+    width: 10rem;
+    height: 10rem;
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 @media (min-width: 641px) {
     .navbar-toggler {
