--- a/portifolio/Shared/MainLayout.razor.css
+++ b/portifolio/Shared/MainLayout.razor.css
@@ -5,12 +5,13 @@
 }
 
 .main {
-    background-color:black;
+    background-image: url('images/gif.gif');
+    background-size:100%;
     flex: 1;
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg,#3a0647 0%, #FE73FE 70%);
 }
 
 .top-row {
