--- a/portifolio/_Imports.razor
+++ b/portifolio/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using portifolio
 @using portifolio.Shared
+@using Microsoft.Azure.Cosmos
+@using Microsoft.Extensions.Configuration
+@using System.Collections.Generic
+@using System.Linq
