--- a/portifolio/Shared/CardItem.razor.css
+++ b/portifolio/Shared/CardItem.razor.css
@@ -1,14 +1,46 @@
 .card {
     height: 20rem;
     width: 15rem;
-    border-radius: 4px;
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    min-width: 14rem;
+    max-width: 16rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    border-radius: 16px;
+    transition: top ease 0.5s;
+    background: rgba(58, 6, 71, 0.75);
+    box-shadow: 2px 8px 36px 0 rgb(58, 6, 71, 0.5);
+    backdrop-filter: blur( 10px );
+    -webkit-backdrop-filter: blur( 10px );
+}
+.card-glass:before {
+    content: '';
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: 1;
+    border-radius: 16px;
+    background: linear-gradient(to right, rgba(142, 56, 128, 0.9) 0%,rgba(142, 56, 128, 0.2) 2%,rgba(58, 6, 71,0) 5%), linear-gradient(to bottom, rgba(142, 56, 128, 0.9) 0%,rgba(142, 56, 128, 0.2) 2%,rgba(58, 6, 71,0) 5%), linear-gradient(to left, rgba(0, 0, 0, 0.5) 0%,rgba(0, 0, 0, 0.2) 2%,rgba(58, 6, 71,0) 5%), linear-gradient(to top, rgba(0, 0, 0, 0.5) 0%,rgba(0, 0, 0, 0.2) 2%,rgba(58, 6, 71,0) 5%);
+    backdrop-filter: blur( 0.1px );
+    -webkit-backdrop-filter: blur( 0.1px );
+}
+.card-glass:after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    border-radius: 16px;
+    background: radial-gradient(at bottom right, rgba(58, 6, 71,0.2) 0%,rgba(58, 6, 71, 0.2) 97%,rgba(222, 193, 217, 0.9) 100%);
+    position: absolute;
+}
+.card:hover {
+    top: -10px;
+    cursor:pointer;
 }
 .card-img{
-    background-size:15rem;
+    background-size:100%;
     height:13rem;
-    width:14rem;
-    margin-top:5px;
+    width:100%;
+    border-top-left-radius:16px;
+    border-top-right-radius:16px;
     margin-left:auto;
     margin-right:auto;
 }
