--- a/portifolio/Shared/MainLayout.razor.css
+++ b/portifolio/Shared/MainLayout.razor.css
@@ -5,13 +5,15 @@
 }
 
 .main {
-    background-image: url('images/gif.gif');
-    background-size:100%;
+    background-color: #000;
+    background-image: url('images/background_2.jpg');
+    background-repeat: no-repeat;
+    background-size: 100%;
     flex: 1;
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg,#3a0647 0%, #FE73FE 70%);
+    background-image: linear-gradient(180deg, #0c0c0c 0%, #3a0647 70%);
 }
 
 .top-row {
