--- a/portifolio/Shared/NavMenu.razor
+++ b/portifolio/Shared/NavMenu.razor
@@ -16,17 +16,17 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
+            <NavLink class="nav-link" href="ai">
                 <span class="oi oi-beaker" aria-hidden="true"></span> AI - Data Science
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
+            <NavLink class="nav-link" href="engineering">
                 <span class="oi oi-cog" aria-hidden="true"></span> Engineering
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
+            <NavLink class="nav-link" href="projects">
                 <span class="oi oi-puzzle-piece" aria-hidden="true"></span> Projects
             </NavLink>
         </li>
