--- a/portifolio/Shared/NavMenu.razor
+++ b/portifolio/Shared/NavMenu.razor
@@ -12,22 +12,22 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-home" aria-hidden="true"></span> Início
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="ai">
-                <span class="oi oi-beaker" aria-hidden="true"></span> AI - Data Science
+                <span class="oi oi-beaker" aria-hidden="true"></span> Ciência de Dados - IA
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="engineering">
-                <span class="oi oi-cog" aria-hidden="true"></span> Engineering
+                <span class="oi oi-cog" aria-hidden="true"></span> Engenharia
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="projects">
-                <span class="oi oi-puzzle-piece" aria-hidden="true"></span> Projects
+                <span class="oi oi-puzzle-piece" aria-hidden="true"></span> Projetos
             </NavLink>
         </li>
     </ul>
