--- a/portifolio/Shared/CardItem.razor
+++ b/portifolio/Shared/CardItem.razor
@@ -6,7 +6,7 @@
         <img class="card-img" aria-hidden="true" src=@ImageURI />
         <strong><span class="font-weight-bold mt-2 mb-2 text-xl-center" > @Title</span></strong><br />
 
-        <span class="text-justify w-100">
+        <span class="text-center w-100 p-1 text-box">
             @Description
         </span>
     </span>
