--- a/portifolio/Shared/CardItem.razor.css
+++ b/portifolio/Shared/CardItem.razor.css
@@ -44,3 +44,11 @@
     margin-left:auto;
     margin-right:auto;
 }
+.text-box {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
