--- a/portifolio/wwwroot/css/app.css
+++ b/portifolio/wwwroot/css/app.css
@@ -18,6 +18,22 @@ a, .btn-link {
     padding-top: 1.1rem;
     color:aliceblue;
 }
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.animated-content {
+    animation: fadeInAnimation ease 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
 
 
 .valid.modified:not([type=checkbox]) {
